--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <title>JobFit | Find Your Worthiness</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
